[project]
name = "osbooks-college-algebra-bundle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandocfilters>=1.5.1",
    "py-asciimath>=0.3.0",
    "pydot>=4.0.0",
    "pygraphviz>=1.14",
    "scipy>=1.15.2",
]
